<resources>
    <string name="app_name">localnh-read</string><string name="choose_folder">choose library folder</string><string name="change_folder">change folder</string><string name="back">back</string><string name="rescan">rescan</string><string name="search">search titles</string><string name="toolbar_rescan">r</string><string name="toolbar_folder">f</string><string name="toolbar_search">s</string><string name="search_hint">search title</string><string name="go">go</string><string name="searching_library">scanning library…</string><string name="search_index_missing">press r on the library page to build the index</string><string name="no_search_results">no matching titles</string><string name="empty_title">no cartridges yet</string><string name="empty_body">choose the folder containing your .lnhc files. your original files will not be changed.</string><string name="folder_access_error">could not save folder access.</string><string name="scanning_library">scanning library…</string><string name="folder_lost">the folder can no longer be read. choose it again.</string><string name="book_count">%1$s · %2$d books</string><string name="no_folder_selected">no library folder selected</string><string name="read">read</string>
</resources>
